--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
                         </div>
                         <div>
                             <p>Your Subject</p>
-                            <input type="text" placeholder="Type Your Name" class="input bg-white mt-2 mb-2 input-bordered w-full max-w-5xl" />
+                            <input type="text" placeholder="Type Your Name" class="input bg-white  mt-2 mb-2 input-bordered w-full max-w-5xl" />
                         </div>
                         <div>
                             <p>Phone Number</p>
@@ -504,7 +504,7 @@
                     </div>
                     <div class="p-6">
                         <p>Your Message</p>
-                        <input type="text" placeholder="Type Your Name" class="input bg-white mt-2 mb-2  input-bordered w-full max-w-5xl h-60" />
+                        <input type="text" placeholder="Type Your Name" class="input bg-white mt-2 mb-2  input-bordered w-full max-w-full h-60" />
                         <button class="btn btn-error w-full"><a href="" class="text-white text-xl">Send Message</a></button>
                     </div>
 
